--- a/client/project.config.json
+++ b/client/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -51,6 +51,12 @@
 					"id": -1,
 					"name": "login",
 					"pathName": "pages/login/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "around",
+					"pathName": "pages/talkaround/index",
 					"query": ""
 				}
 			]
