--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -2,3 +2,6 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/wxserver?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
 jdbc.username=root
 jdbc.password=
+
+upload.local.url=F:/testworkpace/upload
+upload.remote.url=https://93daa979.ngrok.io/wxaserver/upLoad
