--- a/client/project.config.json
+++ b/client/project.config.json
@@ -38,7 +38,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -59,8 +59,8 @@
 					"query": ""
 				},
 				{
-					"id": -1,
-					"name": "around",
+					"id": 3,
+					"name": "topic",
 					"pathName": "pages/topic/index",
 					"query": ""
 				},
@@ -68,6 +68,12 @@
 					"id": -1,
 					"name": "topic-create",
 					"pathName": "pages/topic/create/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "me",
+					"pathName": "pages/me/index",
 					"query": ""
 				}
 			]
