--- a/client/project.config.json
+++ b/client/project.config.json
@@ -38,7 +38,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 5,
+			"current": 6,
 			"list": [
 				{
 					"id": -1,
@@ -75,6 +75,11 @@
 					"name": "me",
 					"pathName": "pages/me/index",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "activity_create",
+					"pathName": "pages/activity/create/index"
 				}
 			]
 		}
