--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,6 +17,11 @@
                     <target>6</target>
                 </configuration>
             </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-war-plugin</artifactId>-->
+                <!--<version>2.6</version>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
@@ -164,5 +169,4 @@
             <version>2.6</version>
         </dependency>
     </dependencies>
-
 </project>
