--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -4,4 +4,4 @@ jdbc.username=root
 jdbc.password=
 
 upload.local.url=F:/testworkpace/upload
-upload.remote.url=https://0f8a33c8.ngrok.io/wxaserver/upLoad
+upload.remote.url=http://154.8.138.76:8080/upLoad
