--- a/client/project.config.json
+++ b/client/project.config.json
@@ -38,7 +38,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 6,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -79,7 +79,14 @@
 				{
 					"id": -1,
 					"name": "activity_create",
-					"pathName": "pages/activity/create/index"
+					"pathName": "pages/activity/create/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "activityinfo",
+					"pathName": "pages/activity/info/index",
+					"query": ""
 				}
 			]
 		}
