--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -4,4 +4,5 @@ jdbc.username=root
 jdbc.password=
 
 upload.local.url=F:/testworkpace/upload
-upload.remote.url=http://154.8.138.76:8080/upLoad
+#upload.remote.url=http://154.8.138.76:8080/upLoad
+upload.remote.url=http://127.0.0.1:8089/wxaserver/upLoad
